config-root/namespaces/jx/kube-prometheus-stack/templates/prometheus-operator/admission-webhooks/kube-prometheus-stack-admission-mutwebhookcfg.yaml
# Source: kube-prometheus-stack/templates/prometheus-operator/admission-webhooks/mutatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: kube-prometheus-stack-admission
  labels:
    app: kube-prometheus-stack-admission
    chart: kube-prometheus-stack-9.4.8
    release: "kube-prometheus-stack"
    heritage: "Helm"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx
webhooks:
  - name: prometheusrulemutate.monitoring.coreos.com
    failurePolicy: Ignore
    rules:
      - apiGroups:
          - monitoring.coreos.com
        apiVersions:
          - "*"
        resources:
          - prometheusrules
        operations:
          - CREATE
          - UPDATE
    clientConfig:
      service:
        namespace: jx
        name: kube-prometheus-stack-operator
        path: /admission-prometheusrules/mutate
